--- a/configs/.env.example
+++ b/configs/.env.example
@@ -1,4 +1,4 @@
-# N8N Configuration
+# n8n Configuration
 N8N_HOST=localhost
 N8N_PORT=5678
 N8N_PROTOCOL=http
@@ -18,7 +18,7 @@ OLLAMA_HOST=http://ollama:11434
 # OpenAI API Key (Optional - if you want to use OpenAI alongside Ollama)
 # OPENAI_API_KEY=sk-your-key-here
 
-# Email Configuration (Optional - for N8N notifications)
+# Email Configuration (Optional - for n8n notifications)
 # SMTP_HOST=smtp.gmail.com
 # SMTP_PORT=587
 # SMTP_USER=your-email@gmail.com
@@ -29,7 +29,7 @@ OLLAMA_HOST=http://ollama:11434
 # N8N_BASIC_AUTH_USER=admin
 # N8N_BASIC_AUTH_PASSWORD=change-this-password
 
-# Advanced N8N Settings
+# Advanced n8n Settings
 # N8N_LOG_LEVEL=info
 # EXECUTIONS_PROCESS=main
 # N8N_METRICS=true
