--- a/configs/docker-compose.yml
+++ b/configs/docker-compose.yml
@@ -11,10 +11,11 @@ services:
     networks:
       - ai-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:11434/"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+      test: ["CMD-SHELL", "ollama list || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
   # OpenWebUI - Beautiful Chat Interface
   open-webui:
