--- a/configs/docker-compose.yml
+++ b/configs/docker-compose.yml
@@ -55,6 +55,8 @@ services:
       - GENERIC_TIMEZONE=${TIMEZONE:-America/New_York}
       # Ollama connection
       - OLLAMA_HOST=http://ollama:11434
+      # Pre-configure Ollama and PostgreSQL credentials for users (no manual setup needed!)
+      - CREDENTIALS_OVERWRITE_DATA={"ollamaApi":{"baseUrl":"http://ollama:11434"},"postgres":{"host":"postgres","port":5432,"database":"workshop_db","user":"workshop","password":"workshop_password","ssl":"disable"}}
       # Optional: Google OAuth (set in .env)
       - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID:-}
       - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET:-}
