Resolved image download issue

--- a/configs/.env.example
+++ b/configs/.env.example
@@ -4,6 +4,10 @@ N8N_PORT=5678
 N8N_PROTOCOL=http
 WEBHOOK_URL=http://localhost:5678/
 
+# Disable secure cookie for local development (allows Safari and non-HTTPS)
+# In Production, use a secure URL
+N8N_SECURE_COOKIE=false
+
 # Timezone (for scheduled workflows)
 TIMEZONE=America/New_York
 
