--- a/configs/.env.example
+++ b/configs/.env.example
@@ -13,20 +13,20 @@ TIMEZONE=America/New_York
 
 # Google OAuth2 Credentials (Optional)
 # Get these from: https://console.cloud.google.com/
-GOOGLE_CLIENT_ID=your-client-id.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=GOCSPX-your-secret-here
+GOOGLE_CLIENT_ID=your-client-id-here
+GOOGLE_CLIENT_SECRET=your-client-secret-here
 
 # Ollama Configuration
 OLLAMA_HOST=http://ollama:11434
 
 # OpenAI API Key (Optional - if you want to use OpenAI alongside Ollama)
-# OPENAI_API_KEY=sk-your-key-here
+# OPENAI_API_KEY=your-api-key-here
 
 # Email Configuration (Optional - for n8n notifications)
 # SMTP_HOST=smtp.gmail.com
 # SMTP_PORT=587
-# SMTP_USER=your-email@gmail.com
-# SMTP_PASSWORD=your-app-password
+# SMTP_USER=your-email@example.com
+# SMTP_PASSWORD=your-smtp-password
 
 # Security (for production deployments)
 # N8N_BASIC_AUTH_ACTIVE=true
