refactor: improve database initialization and setup scripts
- Moved init-db.sql from examples/ to scripts/ directory for better organization
- Added automatic creation of scripts/init-db.sql if missing in Windows setup script
- Changed Ollama model download prompt default from Yes to No for more conservative setup
- Added double-check to ensure init-db.sql exists after compose file setup
- Updated docker-compose.yml to reference new init-db.sql location

--- a/configs/docker-compose.yml
+++ b/configs/docker-compose.yml
@@ -96,7 +96,7 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./examples/init-db.sql:/docker-entrypoint-initdb.d/init-db.sql:ro
+      - ./scripts/init-db.sql:/docker-entrypoint-initdb.d/init-db.sql:ro
     networks:
       - ai-network
     restart: unless-stopped
