--- a/configs/docker-compose.podman-gpu.yml
+++ b/configs/docker-compose.podman-gpu.yml
@@ -41,6 +41,7 @@ services:
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
       - NVIDIA_DRIVER_CAPABILITIES=compute,utility
+      - USE_CUDA_DOCKER=true
 
     # Resource limits for OpenWebUI
     deploy:
